--- a/web_back/login.html
+++ b/web_back/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -29,7 +30,64 @@
             </form>
         </div>
 
-    </div> 
+    </div>
+    <!-- 模态框 -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">警告！</h4>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('.input_sub').on('click', function (e) {
+                e.preventDefault();
+                var Email = $('.input_txt').val().trim();
+                var password = $('.input_pass').val().trim();
+                if (Email == '' || password == '') {
+                    $('.modal-body').text('你输入的账号或密码为空');
+                    $('#myModal').modal({
+                        keyboard: true
+                    })
+                    return;
+                }
+
+
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/admin/user/login',
+                    data: {
+                        username: Email,
+                        password: password
+                    },
+                    success: function (backData) {
+                        if (backData.code == 200) {
+                            window.location.href = 'index.html';
+                        } else {
+                            $('.modal-body').text('你输入的账号或密码错误');
+                            $('#myModal').modal({
+                                keyboard: true
+                            })
+                        }
+                    }
+                })
+            })
+        })
+    </script>
 
 </body>
 
