--- a/web_back/index.html
+++ b/web_back/index.html
@@ -153,13 +153,14 @@
                     })
                 })
             });
-
+             //需求: 首页显示登录人信息
+             //1.一进到首页,就发送ajax请求,获取登录人的详细信息
             $.ajax({
                 url: 'http://localhost:8080/admin/user/info',
                 success: function (backData) {
                     if (backData.code == 200) {
                         $('.user_info>img').attr('src', backData.data.userPic);
-                        $('.user_info>span').html('欢迎&nbsp;&nbsp;李思思', backData.data.nickname);
+                        $('.user_info>span').html('欢迎&nbsp;&nbsp;'+backData.data.nickname);
                         $('.user_center_link>img').attr('src', backData.data.userPic);
                     }
                 }
