--- a/web_back/user.html
+++ b/web_back/user.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
-    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+
     <script src="js/jquery-1.12.4.min.js"></script>
 
 </head>
@@ -26,19 +25,19 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名称：</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control  username" id="inputEmail3" value="李思思">
+                        <input type="text" name="username" class="form-control  username" id="inputEmail3" value="李思思">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">昵称：</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control  name" id="inputEmail3" value="思思">
+                        <input type="text" name="nickname" class="form-control  nickname" id="inputEmail3" value="思思">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">邮箱：</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control  email" id="inputEmail3" value="lisisi@126.com">
+                        <input type="text" name="email" class="form-control  email" id="inputEmail3" value="lisisi@126.com">
                     </div>
                 </div>
 
@@ -46,64 +45,92 @@
                     <label for="inputPassword3" class="col-sm-2 control-label">用户图标：</label>
                     <div class="col-sm-10">
                         <img src="images/2.jpg" alt="" class="user_pic">
-                        <input type="file" id="exampleInputFile">
+                        <input type="file" name="userPic" id="exampleInputFile">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">密码：</label>
                     <div class="col-sm-4">
-                        <input type="password" class="form-control" id="inputEmail3" value="12345678">
+                        <input type="password" name="password" class="form-control password" id="inputEmail3" value="12345678">
                     </div>
                 </div>
 
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-success">修改</button>
+                        <button type="submit" class="btn btn-success btn-edit">修改</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 
-    <!-- 模态框 -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">警告！</h4>
-                </div>
-                <div class="modal-body">
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
     <script>
+        // 入口函数
         $(function () {
-            $('btn-success').on('click', function (e) {
-                e.preventDefault;
-                var email = $('.email').val().trim();
-                var name = $('.name').val().trim();
-                var username = $('.username').val().trim();
-                if (email == '' || name == '' || username == '') {
-                    $('.modal-body').text('你输入的账号或密码为空');
-                    $('#myModal').modal({
-                        keyboard: true
-                    })
-                    return;
+            // 需求: 头像预览
+            $("#exampleInputFile").on('change', function () {
+                var icon = this.files[0];
+                var url = URL.createObjectURL(icon);
+                $('.user_pic').attr('src', url);
+            });
+            //需求:一进到个人中心页面,显示当前登录的用户的信息到对应的标签上.
+            $.ajax({
+                type: 'get',
+                url: "http://localhost:8080/admin/user/detail",
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        for (var key in backData.data) {
+                            $("input." + key).val(backData.data[key])
+                        }
+                        $('img.user_pic').attr('src', backData.data.userPic);
+                    }
                 }
             })
+
+
+            //需求: 点击修改按钮,完成用户信息的修改
+            $('.btn-edit').on('click', function (e) {
+                e.preventDefault();
+                var fd = new FormData($('form')[0]);
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/admin/user/edit',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        if (backData.code == 200) {
+                            alert("修改成功");
+
+                            $.ajax({
+                                url: 'http://localhost:8080/admin/user/info',
+                                success: function (backData) {
+                                    if (backData.code == 200) {
+                                        parent.$('.user_info>img').attr('src',
+                                            backData
+                                            .data.userPic);
+                                        parent.$('.user_info>span').html(
+                                            '欢迎&nbsp;&nbsp;' + backData.data
+                                            .nickname);
+                                        parent.$('.user_center_link>img').attr(
+                                            'src',
+                                            backData.data.userPic);
+                                    }
+                                }
+                            })
+
+
+                        }
+                    }
+                })
+
+
+            })
+
+
         })
     </script>
 </body>
-sc
-
 </html>
