--- a/web_back/login.html
+++ b/web_back/login.html
@@ -24,7 +24,7 @@
             <form class="login_form">
                 <i class="iconfont icon-user"></i>
                 <i class="iconfont icon-key"></i>
-                <input type="text" class="input_txt" placeholder="邮箱/手机号">
+                <input type="text" class="input_txt" placeholder="用户名">
                 <input type="password" class="input_pass" placeholder="密码">
                 <input type="submit" class="input_sub" value="登 录">
             </form>
